# greendeploy-starters

./: .gitignore  HOW_TO_COMMIT.md  POLICIES.md  THIRDPARTYNOTICES.md
starters/django42-plugin/db_focused/: README.rst  cookiecutter.json
starters/django42-plugin/db_focused/{{cookiecutter.project_slug}}/: pyproject.toml  setup.cfg
starters/django42-plugin/default/: cookiecutter.json
starters/django42-plugin/default/{{cookiecutter.project_slug}}/: .coveragerc  .pre-commit-config.yaml  CHANGELOG.rst  COMMANDS.rst  LICENSE  README.rst  output_cookiecutter.json  pyproject.toml  setup.cfg  tox.ini
starters/django42-plugin/default/{{cookiecutter.project_slug}}/.github/workflows/: main.yml
starters/django42-plugin/default/{{cookiecutter.project_slug}}/tests/: conftest.py
starters/dockerized-django/default/: cookiecutter.json
starters/dockerized-django/default/{{cookiecutter.project_slug}}/: dependabot.yml  local.yml  production.yml
starters/dockerized-django/default/{{cookiecutter.project_slug}}/.github/: dependabot.yml
starters/dockerized-django/default/{{cookiecutter.project_slug}}/config/: asgi.py  urls.py  wsgi.py
starters/dockerized-django/default/{{cookiecutter.project_slug}}/requirements/: base.in  base.txt  local.in  local.txt
starters/dockerized-django32/default/: README.md  cookiecutter.json
starters/dockerized-django32/default/{{cookiecutter.project_slug}}/: .gitignore  .greendeployhq.yml
starters/dockerized-django32/default/{{cookiecutter.project_slug}}/config/: urls.py
starters/dockerized-django32/default/{{cookiecutter.project_slug}}/core/: urls.py
starters/dockerized-django32/default/{{cookiecutter.project_slug}}/requirements/: base.in  base.txt  local.in
starters/dockerized-django32/full/: README.md  cookiecutter.json
starters/dockerized-django32/full/{{cookiecutter.project_slug}}/: local.yml
starters/dockerized-django32/full/{{cookiecutter.project_slug}}/base/: context_processors.py  fields.py  mixins.py  urls.py  views.py
starters/dockerized-django32/full/{{cookiecutter.project_slug}}/config/: urls.py
starters/dockerized-django32/full/{{cookiecutter.project_slug}}/core/: context_processors.py
starters/dockerized-django32/full/{{cookiecutter.project_slug}}/requirements/: base.in  base.txt  local.txt  production.in  production.txt
starters/dockerized-django42/default/: CHANGELOG.md  README.md  cookiecutter.json
starters/dockerized-django42/default/{{cookiecutter.project_slug}}/: .coveragerc  .skip-overwrite  BASE_MAINTENANCE.rst  config.yml  local.yml  manage.py  output_cookiecutter.json  production.yml
starters/dockerized-django42/default/{{cookiecutter.project_slug}}/base/: webarg_parsers.py
starters/dockerized-django42/tailwind-htmx/: README.md  prompts.yml
starters/dockerized-django42/tailwind-htmx/{{cookiecutter.project_slug}}/: BASE_MAINTENANCE.rst  USING_W_DOCKER_QUICK_START.rst  local.yml  manage.py  production.yml  pytest.ini  template-cli.py
starters/micro-django42/default/: README.md
starters/micro-django42/default/{{cookiecutter.project_slug}}/: .env.local  .skip-overwrite  README-STARTER.md  README.md  manage.py  output_cookiecutter.json  requirements.txt
starters/micro-django42/tailwind-htmx/: BASE_MAINTENANCE.md  README.md
starters/micro-django42/tailwind-htmx/{{cookiecutter.project_slug}}/: .skip-reverse  README-STARTER.md  README.md  manage.py  output_cookiecutter.json  requirements.txt
starters/python-project/default/: cookiecutter.json
starters/python-project/default/{{cookiecutter.project_slug}}/: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
starters/python-project/default/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py  __main__.py
starters/python-project/default/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/framework/: __init__.py
(+180 files in other folders)
