[metadata]
name = greendeploy_django_ltree
version = 0.6.0b5
description = greendeploy-django-ltree is a Django package for using Postgres ltree fields in your Django models.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/GreenDeploy-io/greendeploy-django-ltree
author = Mario-César
maintainer = Kimsia Sim
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Typing :: Typed
keywords =
    django
    ltree
    postgres
project_urls =
    Changelog = https://github.com/GreenDeploy.io/greendeploy-django-ltree/blob/main/CHANGELOG.rst
    Twitter = https://twitter.com/KimStacks

[options]
packages = find:
install_requires =
    Django>=3.2
python_requires = >=3.8
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[coverage:run]
branch = True
parallel = True
source =
    src
    tests

[coverage:paths]
source =
    src
    .tox/**/site-packages

[coverage:report]
show_missing = True

[flake8]
max-line-length = 88
extend-ignore = E203
