[metadata]
name = {{cookiecutter.project_slug}}
version = 0.0.1
description = one line description about the project
long_description = file: README.rst
long_description_content_type = text/x-rst
url = {{cookiecutter.github_url}}
author = author_name
maintainer = maintainer_name
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Typing :: Typed
keywords =
    django
    # keywords here
project_urls =
    Changelog = {{cookiecutter.github_url}}/blob/main/CHANGELOG.rst

[options]
packages = find:
install_requires =
    Django>=4.2
python_requires = >=3.10
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[coverage:run]
branch = True
parallel = True
source =
    src
    tests

[coverage:paths]
source =
    src
    .tox/**/site-packages

[coverage:report]
show_missing = True

[flake8]
max-line-length = 88
extend-ignore = E203
