[metadata]
name = {{ cookiecutter.project_slug }}

[options]
python_requires = ~=3.10
setup_requires = setuptools_scm
packages = find:
zip_safe = false
install_requires =
    # direct dependencies
    pep517
    {{ cookiecutter.pip_tools_version }}
    {{ cookiecutter.pip_version }}
    pyfiglet ~= 0.7